--- a/11/11.2/11.2.md
+++ b/11/11.2/11.2.md
@@ -1,12 +1,18 @@
 # 11.2. Código fuente (Repositorios)
 
+## Módulo 2: Gestión de Empleados
+
+-Código Fuente del módulo Empleados
+[(Ir aquí)](../../mallplaza_app/mallplaza_app/mantenimiento/)
+
 ## Módulo 4: Inquilinos
 El código fuente principal del módulo de inquilinos lo podrás encontras en la carpeta de mallplaza_app, la cual contiene otra carpeta con el mismo nombre donde se podra observar todos los módulos realizados.
 
 - Código Fuente principal del módulo Inquilino
 [(Ir aquí)](../../mallplaza_app/mallplaza_app/inquilino/)
 
-# MÓDULO 8: Gestión de Mantenimientos Programados
+## Módulo 8: Gestión de Mantenimientos Programados
 
 -Código Fuente del módulo Mantenimiento
 [(Ir aquí)](../../mallplaza_app/mallplaza_app/mantenimiento/)
+
