--- a/9/9.1/9.1.md
+++ b/9/9.1/9.1.md
@@ -57,6 +57,12 @@ CREATE INDEX idx_acuerdo_tipo_acuerdo ON Acuerdo (tipo_acuerdo);
 CREATE INDEX idx_solicitud_recobros_id_recobro ON Solicitud_Recobros (id_recobro);
 CREATE INDEX idx_solicitud_recobros_estado ON Solicitud_Recobros (estado_solicitud);
 ```
+## MÓDULO 7: EVENTOS
+```sql
+-- Tabla Evento
+CREATE INDEX idx_codigo_evento ON Evento (codigo_evento);
+CREATE INDEX idx_nombre_evento ON Evento (nombre_evento);
+```
 
 ## MÓDULO 8: MANTEMIENTOS
 
