--- a/9/9.4/9.4.md
+++ b/9/9.4/9.4.md
@@ -1,3 +1,56 @@
 # 9.4. Otros objetos de BD
 
-Sample content for section 9.4.
+## Trigger para evitar el registro de un inquilino si el espacio comercial está ocupado
+
+Si un Espacio_Comercial tiene su estado como "Activo", no debería ser posible asignarlo a un nuevo Inquilino.
+
+```sql
+CREATE OR REPLACE TRIGGER trg_prevent_inquilino_if_occupied
+BEFORE INSERT ON Inquilino
+FOR EACH ROW
+DECLARE
+  espacio_estado VARCHAR(10);
+BEGIN
+  SELECT estado INTO espacio_estado
+  FROM Espacio_Comercial
+  WHERE id_espacio_comercial = :NEW.id_espacio_comercial;
+
+  IF espacio_estado = 'ocupado' THEN
+    RAISE_APPLICATION_ERROR(-20001, 'El espacio comercial ya está ocupado.');
+  END IF;
+END;
+```
+
+## Trigger para actualizar el estado del espacio comercial cuando se registre un inquilino
+
+```sql
+CREATE OR REPLACE TRIGGER trg_update_espacio_on_inquilino_insert
+AFTER INSERT ON Inquilino
+FOR EACH ROW
+BEGIN
+  UPDATE Espacio_Comercial
+  SET estado = 'Activo'
+  WHERE id_espacio_comercial = :NEW.id_espacio_comercial;
+END;
+```
+
+## Garantizar que un inquilino no se registre dos veces con el mismo espacio comercial
+Evitar que dos registros en la tabla Inquilino apunten al mismo id_espacio_comercial mientras el estado del inquilino sea activo.
+
+```sql
+CREATE OR REPLACE TRIGGER trg_prevent_duplicate_active_inquilino
+BEFORE INSERT OR UPDATE ON Inquilino
+FOR EACH ROW
+DECLARE
+  count_inquilinos INTEGER;
+BEGIN
+  SELECT COUNT(*)
+  INTO count_inquilinos
+  FROM Inquilino
+  WHERE id_espacio_comercial = :NEW.id_espacio_comercial AND estado_inquilino = 'activo';
+
+  IF count_inquilinos > 0 THEN
+    RAISE_APPLICATION_ERROR(-20002, 'Ya existe un inquilino activo para este espacio comercial.');
+  END IF;
+END;
+```
