--- a/9/9.1/9.1.md
+++ b/9/9.1/9.1.md
@@ -62,6 +62,9 @@ CREATE INDEX idx_solicitud_recobros_estado ON Solicitud_Recobros (estado_solicit
 -- Tabla Evento
 CREATE INDEX idx_codigo_evento ON Evento (codigo_evento);
 CREATE INDEX idx_nombre_evento ON Evento (nombre_evento);
+
+-- Tabla Espacio Comun
+CREATE INDEX idx_espacio_comun_id_espacio_común ON Espacio_comun (id_espacio_comun);
 ```
 
 ## MÓDULO 8: MANTEMIENTOS
