--- a/11/11.1/11.1.md
+++ b/11/11.1/11.1.md
@@ -98,6 +98,18 @@ Facilitar la gestión eficiente de recobros asociados a acuerdos, proyectos, y s
     - Control de accesos según roles (administradores, supervisores, contadores).
     - Registro de actividades realizadas en el módulo para auditorías.
 
+## 7. Módulo de eventos
+1. Objetivo del módulo:
+
+Dar vistas de los módulos a realizarse y creación de nuevos módulos o eliminación de los mismos
+
+2. Funcionalidades cubiertas
+**Gestión de datos principales:**
+- Creación, guardado y eliminación de los datos de los eventos.
+  - Se facilita la busqueda de un espacio disponible para el evento solo mostrando los que no estén ocupados dado las fechas proporcionadas
+  - Se muestran filtros por nombre y código para buscar los eventos
+  - Se facilita la busqueda por intervalo de tiempo para mostrar los proximos eventos a ocurrir
+
 ## 8. Módulo de Gestión de mantenimientos programados
 1. Objetivo del módulo: Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
 
