--- a/11/11.2/11.2.md
+++ b/11/11.2/11.2.md
@@ -11,6 +11,9 @@ El código fuente principal del módulo de inquilinos lo podrás encontras en la
 - Código Fuente principal del módulo Inquilino
 [(Ir aquí)](../../mallplaza_app/mallplaza_app/inquilino/)
 
+## Módulo 7: Eventos
+[(Ir aquí)](../../mallplaza_app/mallplaza_app/evento/)
+
 ## Módulo 8: Gestión de Mantenimientos Programados
 
 -Código Fuente del módulo Mantenimiento
