--- a/11/11.2/11.2.md
+++ b/11/11.2/11.2.md
@@ -12,6 +12,7 @@ El código fuente principal del módulo de inquilinos lo podrás encontras en la
 [(Ir aquí)](../../mallplaza_app/mallplaza_app/inquilino/)
 
 ## Módulo 7: Eventos
+El código fuente principal del módulo de eventos lo podrás encontras en la carpeta de mallplaza_app, la cual contiene otra carpeta con el mismo nombre donde se podra observar todos los módulos realizados.
 [(Ir aquí)](../../mallplaza_app/mallplaza_app/evento/)
 
 ## Módulo 8: Gestión de Mantenimientos Programados
