--- a/10/10.1/10.1.md
+++ b/10/10.1/10.1.md
@@ -1,7 +1,7 @@
 # 10.1. Listado de Procesos Batch
 
 ## Módulo 4: Inquilino
-**Actualización de Estados de Inquilinos**<br>
+**Reporte de Ocupación de Espacios**<br>
 Cambiar el estado de los inquilinos en función de fechas o eventos, como contratos vencidos o pagos pendientes.
 - Revisar los contratos asociados (si se almacenan en otra tabla) para detectar vencimientos.
 - Actualizar la columna estado_inquilino a los valores de ACTIVO o INACTIVO.
@@ -12,3 +12,20 @@ Generar un reporte diario/semanal de los espacios comerciales ocupados y disponi
 
 **Generación de Reportes para Administración**<br>
 Crear reportes periódicos con información consolidada de inquilinos, zonas y espacios comerciales.
+
+
+## Módulo 6: Recobros
+**Actualización de Estados de Recobros**<br>
+Actualizar automáticamente el estado de los recobros en función de eventos, como solicitudes aprobadas o vencimientos:
+  - Revisar las solicitudes asociadas (almacenadas en la tabla Solicitud_Recobros) para determinar su estado.
+  - Cambiar el estado de los recobros en la columna estado según la lógica:
+    - "Activo" si las solicitudes relacionadas están aprobadas y dentro del plazo.
+    - "Pendiente" si están en espera de aprobación o en planificacion.
+    - "Rechazado" si la solicitud ha sido rechazado.
+
+**Reporte de Estado de Recobros por Proyecto**<br>
+Generar reportes diarios/semanales del estado de los recobros agrupados por proyecto:
+  - Consultar la tabla Recobros y agrupar por proyectos (tabla Proyecto_Recobros) para determinar:
+    - Total de recobros asociados a cada proyecto.
+    - Estado de los recobros (pendientes, activos, rechazado).
+    - Monto total agrupado por proyecto.
