--- a/10/10.2/10.2.md
+++ b/10/10.2/10.2.md
@@ -5,3 +5,12 @@ El objetivo principal de los procesos Batch es automatizar tareas que, de otro m
 - Actualización automática de estados de inquilinos (por ejemplo, pasar de "ACTIVO" a "INACTIVO" al vencerse un contrato o por falta de pagos).
 - Generación periódica de reportes operativos para la administración (ocupación de espacios, ingresos generados, etc.).
 - Tasa de ocupación por zona o tipo de espacio comercial.
+
+## Módulo 4: Inquilino
+El objetivo principal de los procesos batch es automatizar las tareas frecuentes relacionadas con la gestión de recobros y la generación de reportes administrativos.
+  - Automatización del seguimiento de recobros:
+    - Cambiar automáticamente el estado de los recobros basándose en las solicitudes y fechas clave, minimizando errores humanos y asegurando una gestión eficiente.  
+  - Reportes periódicos:
+    - Proveer información consolidada sobre el estado de recobros para tomar decisiones informadas.
+  - Monitoreo de proyectos:
+    - Facilitar la identificación de proyectos con problemas de recobro, permitiendo priorizar esfuerzos en áreas críticas.
