--- a/11/11.2/11.2.md
+++ b/11/11.2/11.2.md
@@ -11,6 +11,12 @@ El código fuente principal del módulo de inquilinos lo podrás encontras en la
 - Código Fuente principal del módulo Inquilino
 [(Ir aquí)](../../mallplaza_app/mallplaza_app/inquilino/)
 
+## Módulo 3: Recobros
+
+-Código Fuente del módulo Recobros
+[(Ir aquí)](../../mallplaza_app/mallplaza_app/recobros/)
+
+
 ## Módulo 7: Eventos
 El código fuente principal del módulo de eventos lo podrás encontras en la carpeta de mallplaza_app, la cual contiene otra carpeta con el mismo nombre donde se podra observar todos los módulos realizados.
 [(Ir aquí)](../../mallplaza_app/mallplaza_app/evento/)
